--- a/app/src/main/res/layout/fragment_illustrations.xml
+++ b/app/src/main/res/layout/fragment_illustrations.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/tl_little_sister"
+        android:id="@+id/tl_illustrations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -28,7 +28,7 @@
         android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tl_little_sister" />
+        app:layout_constraintTop_toBottomOf="@+id/tl_illustrations" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content"
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tl_little_sister"
+        app:layout_constraintTop_toBottomOf="@+id/tl_illustrations"
         app:layout_constraintTop_toTopOf="@id/divider" />
 
 
