--- a/app/src/main/res/layout/regist.xml
+++ b/app/src/main/res/layout/regist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:text="这里是图片点击后的页面"
+        android:text="这是regist界面"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
