--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -1,9 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ImageView
+        android:id="@+id/iv_bg_personal"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="#D5D5D5"/>
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/iv_header_personal"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="15dp"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_launcher"
+        app:riv_border_width="0dp"
+        app:riv_oval="true" />
+
     <TextView
-        android:text="这里是用户详细页面"
+        android:layout_width="120dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@+id/iv_bg_personal"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="21dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="right"
+        android:paddingRight="20dp"
+        android:text="2人来访"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:background="@drawable/shape"
+        android:id="@+id/tv_visitorNum_personal" />
+
+    <ImageView
+        android:id="@+id/iv_browse_personal"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignStart="@+id/tv_visitorNum_personal"
+        android:layout_alignTop="@+id/tv_visitorNum_personal"
+        android:layout_marginStart="15dp"
+        android:src="@drawable/browse" />
+
+    <ImageView
+        android:id="@+id/iv_comments_personal"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="13dp"
+        android:layout_marginTop="11dp"
+        android:layout_toStartOf="@+id/iv_settings_personal"
+        android:src="@drawable/comments" />
+
+    <ImageView
+        android:id="@+id/iv_settings_personal"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignEnd="@+id/tv_visitorNum_personal"
+        android:layout_alignTop="@+id/iv_comments_personal"
+        android:src="@drawable/set" />
+    <TextView
+        android:id="@+id/tv_username_personal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="25dp"
+        android:text="用户名"
+        android:textSize="18sp"
+        android:layout_below="@+id/iv_header_personal"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="5dp" />
+    <TextView
+        android:id="@+id/tv_signature_personal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6666666666666666666666666666"
+        android:textColor="#999999"
+        android:layout_below="@+id/tv_username_personal"
+        android:layout_marginLeft="20dp"
+        android:maxLength="30"
+        android:layout_marginTop="5dp" />
+    <LinearLayout
+        android:id="@+id/ll_toolbar_personal"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@id/tv_signature_personal"
+        android:layout_marginRight="10dp">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/ll_attention_perosnal"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_attentionNum_personal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:text="1"
+                    android:textSize="20sp"
+                    android:textColor="#000000"
+                    android:gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="关注"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_fans_perosnal"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_fansNum_personal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:text="52"
+                    android:textSize="20sp"
+                    android:textColor="#000000"
+                    android:gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="粉丝"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_liked_perosnal"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_likedNum_perosnal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:text="2"
+                    android:textSize="20sp"
+                    android:textColor="#000000"
+                    android:gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="被赞"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/ll_design_perosnal"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:id="@+id/tv_design_icon_personal"
+                    android:layout_width="30dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:src="@drawable/edit"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="设计"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_signIn_perosnal"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:id="@+id/tv_signIn_icon_personal"
+                    android:layout_width="30dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:src="@drawable/calendar"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="签到"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="#555555"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        android:id="@+id/view_line"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@id/ll_toolbar_personal"
+        android:background="#555555"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"/>
+    <GridView
+        android:id="@+id/gv_imgList_personal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="3"
+        android:layout_below="@id/view_line"
+        android:layout_margin="10dp"
+        android:verticalSpacing="20dp">
+
+    </GridView>
+</RelativeLayout>
