--- a/app/src/main/res/layout/activity_picture_detail.xml
+++ b/app/src/main/res/layout/activity_picture_detail.xml
@@ -1,9 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ImageView
+        android:background="@mipmap/ic_launcher"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@mipmap/aixin"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="15dp"/>
+    <ImageView
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:src="@mipmap/download"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="210dp"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@mipmap/fenxiang"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="15dp"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="250dp"
+        android:src="@mipmap/xiaoxi"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="285dp"
+        android:src="@mipmap/good"/>
     <TextView
-        android:text="这里是图片点击后的页面"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:textSize="20dp"
+        android:text="(2000)"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="320dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="320dp"
+        android:background="#F0F0F0" />
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="325dp"
+        android:layout_marginLeft="20dp"
+        android:text="共2条评论"/>
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="325dp"
+        android:layout_marginLeft="300dp"
+        android:text="全部"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginLeft="320dp"
+        android:src="@mipmap/gengduo"/>
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="360dp"
+        android:layout_marginLeft="15dp"
+        android:src="@mipmap/ic_launcher"
+        app:riv_border_width="0dp"
+        app:riv_oval="true" />
+    <TextView
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:text="用户1"
+        android:textSize="20dp"
+        android:textColor="#080000"
+        android:layout_marginTop="360dp"
+        android:layout_marginLeft="100dp"/>
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:text="666666666"
+        android:textSize="15dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginLeft="100dp"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginLeft="320dp"
+        android:src="@mipmap/good"/>
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="420dp"
+        android:layout_marginLeft="15dp"
+        android:src="@mipmap/ic_launcher"
+        app:riv_border_width="0dp"
+        app:riv_oval="true" />
+    <TextView
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:text="用户2"
+        android:textSize="20dp"
+        android:textColor="#080000"
+        android:layout_marginTop="420dp"
+        android:layout_marginLeft="100dp"/>
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:text="666666666"
+        android:textSize="15dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginLeft="100dp"/>
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginLeft="320dp"
+        android:src="@mipmap/good"/>
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="470dp"
+        android:text="添加评论"
+        android:textSize="15dp"
+        android:textColor="#D0D0D0"/>
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="480dp"
+        android:layout_marginLeft="310dp"
+        android:src="@mipmap/fasong"/>
+</RelativeLayout>
