--- a/app/src/main/res/layout/author_item_img.xml
+++ b/app/src/main/res/layout/author_item_img.xml
@@ -9,9 +9,9 @@
     android:layout_marginTop="5dp">
 
     <ImageView
-        android:id="@+id/img_content"
+        android:id="@+id/author_img_content"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"/>
 
 </android.support.v7.widget.CardView>
