--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         app:elevation="0dp"
         android:theme="@style/AppTheme.NoActionBar">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -21,27 +20,33 @@
             android:background="@color/colorPrimaryDark"
             app:titleTextColor="@color/black"
             >
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="登录"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20dp" />
-
-            <Button
-                android:id="@+id/btn_forgetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@color/colorPrimaryDark"
-                android:text="忘记密码"
-                android:textColor="@color/white"
-                android:textSize="12dp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/bt_login_back"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/back"/>
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:paddingTop="4dp"
+                    android:layout_toRightOf="@+id/bt_login_back"
+                    android:text="登录"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20sp" />
+                <Button
+                    android:id="@+id/login_forgot_passWord"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:background="@null"
+                    android:textColor="@color/white"
+                    android:text="忘记密码？"/>
+            </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
@@ -85,7 +90,7 @@
             />
 
        <EditText
-            android:id="@+id/login_id"
+            android:id="@+id/et_login"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@null"
@@ -103,7 +108,7 @@
             />
 
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/et_passWord"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@null"
@@ -134,6 +139,7 @@
         android:orientation="horizontal"
         >
         <Button
+            android:id="@+id/bt_regist"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="注册"
@@ -145,6 +151,7 @@
             android:layout_marginRight="30dp"
             />
         <Button
+            android:id="@+id/bt_login"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="登录"
