--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -22,17 +22,24 @@
             app:titleTextColor="@color/black"
             >
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="注册"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20dp" />
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp">
+                <Button
+                    android:id="@+id/bt_register_back"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/back"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:text="注册"
+                    android:textColor="@color/white"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"/>
+            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -59,7 +66,7 @@
             />
 
         <EditText
-            android:id="@+id/register_id"
+            android:id="@+id/et_register_name"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
@@ -84,7 +91,7 @@
             />
 
         <EditText
-            android:id="@+id/register_password"
+            android:id="@+id/et_register_passWord"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
@@ -102,7 +109,7 @@
 
 
         <EditText
-            android:id="@+id/register_repassword"
+            android:id="@+id/et_register_re_passWord"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
@@ -125,7 +132,7 @@
             android:layout_marginTop="20dp"
             />
         <EditText
-            android:id="@+id/phone_number"
+            android:id="@+id/et_register_phone_number"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
@@ -145,7 +152,7 @@
             android:background="@color/white"
             android:orientation="horizontal">
             <EditText
-                android:id="@+id/verification_code"
+                android:id="@+id/et_register_verification_code"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:background="@color/white"
@@ -156,6 +163,7 @@
                 android:layout_weight="5"
                 />
             <Button
+                android:id="@+id/bt_register_get_code"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="获取验证码"
@@ -185,6 +193,7 @@
         android:orientation="horizontal"
         >
         <Button
+            android:id="@+id/bt_register_ok"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="完成注册"
