--- a/app/src/main/res/layout/img_detail.xml
+++ b/app/src/main/res/layout/img_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -119,10 +120,12 @@
         android:id="@+id/fab_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="70dp"
         android:layout_marginEnd="16dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+
+        app:backgroundTint="?attr/colorControlHighlight"
         app:borderWidth="0dp"
         app:srcCompat="@drawable/favorites" />
 
