--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,13 @@
 
 
     <!-- button的边框颜色 -->
-    <color name="bbutton_danger_pressed">#ffd2322d</color>
+    <color name="bbutton_danger_pressed">#2894ff</color>
     <color name="bbutton_danger_edge">#46a3ff</color>
     <color name="bbutton_danger_disabled">#a5d9534f</color>
     <color name="bbutton_danger_disabled_edge">#a5d43f3a</color>
     <color name="bbutton_danger">#66b3ff</color>
     <color name="text_font_white">#FFFFFF</color>
+
+    <!-- 注册提示颜色 -->
+    <color name="register_ok">#d0d0d0</color>
 </resources>
